[package]
name = "lolcate-rs"
version = "0.10.0"
description = "A comically fast way of indexing and querying your filesystem. Replaces locate / mlocate / updatedb."
documentation = "https://github.com/ngirard/lolcate-rs/blob/master/README.md"
readme = "README.md"
repository = "https://github.com/ngirard/lolcate-rs"
keywords = ["filesystem-indexer", "search", "regex"]
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0"
authors = ["Nicolas Girard <girard.nicolas@gmail.com>"]
edition = "2018"
exclude = [
    "/misc/**",
    "/mk_test_tree.sh",
    "notes.txt",
    "/test/**"
]

[dependencies]
bstr = "1"
clap = "2"
crossbeam-channel = "0.5"
dirs = "5"
ignore = "0.4"
lz4 = "1.26.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
termcolor = "1"
basic-toml = "0.1"
walkdir = "2"

[target.'cfg(not(windows))'.dependencies]
expanduser = "1.2"

[[bin]]
path = "src/main.rs"
name = "lolcate"

[profile.release]
lto = true
